--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,7 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-image: url("bgtile.png");
+  /*background-repeat: repeat;*/
   margin: 0;
 }
